--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,77 @@
 body {
-   width: 80%;
-   margin: 100px auto;
+	width: 80%;
+	margin: 100px auto;
 }
 
 img {
-    width:100px;
-    height:100px;
+	width: 100px;
+	height: 100px;
 }
 
 ul {
-    -webkit-perspective:600;
+	-webkit-perspective: 600;
 }
 
-
 li {
-    list-style:none;
-    float:left;
-    margin-right:50px;
-    margin-bottom:50px;
-    cursor:pointer;
-    width:100px;
-    height:100px;
-    position:relative;
-    counter-increment: item;
+	list-style: none;
+	float: left;
+	margin-right: 50px;
+	margin-bottom: 50px;
+	cursor: pointer;
+	width: 100px;
+	height: 100px;
+	position: relative;
+	counter-increment: item;
 }
 
 li div {
-    width:100%;
-    height:100%;
-    position:absolute;
-    -webkit-transition: all .5s;
-    -webkit-backface-visibility:hidden;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	-o-transition: all .5s;
+	-ms-transition: all .5s;
+	transition: all .5s;
+	-webkit-backface-visibility: hidden;
 }
 
 .front {
-    z-index:3;
-    color:black;
-    text-align:center;
-    line-height:100px;
-    font-size:80;
-    background:#e3e3e3;
+	z-index: 3;
+	color: black;
+	text-align: center;
+	line-height: 100px;
+	font-size: 80;
+	background: #e3e3e3;
 }
 
 li:hover .front {
-    z-index:0;  
-    -webkit-transform:rotateY(180deg);
+	z-index: 0;
+
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	-ms-transform: rotateY(180deg);
+	transform: rotateY(180deg);
 }
 
 li:hover .back {
-    -webkit-transform:rotateY(0);
+	-webkit-transform: rotateY(0);
+	-moz-transform: rotateY(0);
+	-o-transform: rotateY(0);
+	-ms-transform: rotateY(0);
+	transform: rotateY(0);
 }
 
-li .front:after{
-    content: counter(item);   
+li .front:after {
+	content: counter(item);
 }
 
 .back {
-    -webkit-transform:rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	-ms-transform: rotateY(180deg);
+	transform: rotateY(180deg);
 }
